--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.1.2",
     "ngx-spinner": "^9.0.2",
-    "ngx-toastr": "^10.2.0",
+    "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -35,6 +35,7 @@
     "@angular/cli": "~10.2.0",
     "@angular/compiler-cli": "~10.2.3",
     "@angular/language-service": "~10.2.3",
+    "@angular/localize": "^10.2.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
