--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "burry-front",
-  "version": "0.0.0",
+  "version": "0.0.2-SNAPSHOT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
